fixed nav bar not showing up on side when on laptop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,3 +236,13 @@ h2 {
 .contact-form input, .contact-form textarea {
   border: solid #666 1px;
 }
+
+@media only screen and (min-width: 768px) {
+  main {
+    padding-left: 85px;
+  }
+
+  .side-bar {
+    display: block;
+  }
+}
